--- a/site1/fndolmp.html
+++ b/site1/fndolmp.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>KFC Main Page de</title>
+	<title>Find Olymp</title>
 	<link rel="stylesheet" href="css1/bootstrap.min.css">
 	<link rel="stylesheet" href="css1/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="https://www.kfc-kazakhstan.kz/assets/img/desktop/favicon.ico">
+	<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="">
 </head>
 <body>
 	<header>
