--- a/site1/soon.html
+++ b/site1/soon.html
@@ -35,7 +35,7 @@
 
 				<div id="collapsable-nav" class="collapse navbar-collapse">
 		           <ul id="nav-list" class="nav navbar-nav navbar-right">
-		            <li class="visible-xs active">
+		            <li class="visible-xs">
                   <a href="fndolmp.html">
                   <span class="glyphicon glyphicon-home"></span> Home</a>
                 </li>
@@ -59,7 +59,8 @@
 	</header>
 
   	<div id="main-content" class="container">
-  		
+  	<h2 id="soon" class="text-center">Soon!!!</h2>
+      <p class="text-center">Wait a lot please :)</p>	
 
     
   	</div>
