--- a/site1/fndolmp.html
+++ b/site1/fndolmp.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="wws" content="height=device-height, initial-scale=1" >
 	<title>Find Olymp</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 	<link rel="stylesheet" href="css1/bootstrap.min.css">
@@ -17,6 +18,9 @@
 		<nav id="header-nav" class="navbar navbar-default">
 			<div class="container">
 				<div class="navbar-header">
+					<span id="opengo" class="visible-xs visible-sm" style="font-size:10vw;cursor:pointer;color:black;" onclick="openNav()">&#9776;</span>
+
+
 					<a href="fndolmp.html" class="pull-left visible-md visible-lg">
 						<div id="logo-img"></div>
 					</a>
@@ -61,6 +65,7 @@
 
   	<div id="main-content" class="container">
   		<div id="sidenav" class="sidenav">
+  			<a href="javascript:void(0)" class="closebtn visible-xs visible-sm" onclick="closeNav()">&times;</a>
   			<a id="homie" href="#"><i class="fas fa-home"></i><span>Home</span></a>
   			<a id="abouts" href="#"><i class="fas fa-flask"></i><span>Chemistry</span></a>
   			<a id="servicess" href="#"><i class="fas fa-laptop"></i><span>Informatics</span></a>
@@ -101,6 +106,19 @@
       <div class="text-center coke">&copy; Copyright FO Batya Production 2020</div>
       </div>
     </footer>
+    <script>
+function openNav() {
+  document.getElementById("sidenav").style.width = "120px";
+  document.getElementById("main_content").style.marginLeft = "120px";
+  document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+}
+
+function closeNav() {
+  document.getElementById("sidenav").style.width = "0";
+  document.getElementById("main_content").style.marginLeft= "0";
+  document.body.style.backgroundColor = "white";
+}
+</script>
 	<script src="js1/jquery-3.5.1.min.js"></script>
 	<script src="js1/bootstrap.min.js"></script>
 	<script src="js1/script.js"></script>
