--- a/site1/fndolmp.html
+++ b/site1/fndolmp.html
@@ -26,60 +26,35 @@
 					</a>
 					<div class="navbar-brand">
 						<a href="fndolmp.html"><h1><span id="find">Find</span> Olymp</h1></a>
-						<p class="hidden-xs">
-							
-						</p>
 					</div>
-					<!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-        				<span class="sr-only">Toggle navigation</span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-        				<span class="icon-bar"></span>
-      				</button> -->
+          <form id="serch" class="navbar-form navbar-right visible-lg">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+            </form>
 				</div>
-
-				<!-- <div id="collapsable-nav" class="collapse navbar-collapse">
-		           <ul id="nav-list" class="nav navbar-nav navbar-right">
-		            <li class="visible-xs active">
-                  <a href="fndolmp.html">
-                  <span class="glyphicon glyphicon-home"></span> Home</a>
-                </li>
-                <li class="">
-		              <a href="soon.html">
-		                <span class="glyphicon glyphicon-bullhorn"></span><br class="hidden-xs"> News</a>
-		            </li>
-		            <li>
-		              <a href="soon.html">
-		                <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
-		            </li>
-		            <li>
-		              <a href="mailto: aytp84@gmail.com">
-		                <span class="glyphicon glyphicon-envelope"></span><br class="hidden-xs"> Email Us</a>
-		            </li>
-		          </ul> #nav-list
-		        </div> --> <!-- .collapse .navbar-collapse -->
-
 			</div>
 		</nav>
 	</header>
-
+    <section id="fotka"></section>
   	<div id="main-content" class="container">
   		<div id="sidenav" class="sidenav">
   			<a href="javascript:void(0)" class="closebtn visible-xs visible-sm" onclick="closeNav()">&times;</a>
   			<a id="homie" href="#"><i class="fas fa-home"></i><span>Home</span></a>
-  			<a id="abouts" href="#"><i class="fas fa-flask"></i><span>Chemistry</span></a>
-  			<a id="servicess" href="#"><i class="fas fa-laptop"></i><span>Informatics</span></a>
-  			<a id="clientss" href="#"><i class="fas fa-leaf"></i><span>Biology</span></a>
-  			<a id="contacts" href="#"><i class="fas fa-atom"></i><span>Physics</span></a>
+  			<a id="abouts" href="soon.html"><i class="fas fa-flask"></i><span>Chemistry</span></a>
+  			<a id="servicess" href="soon.html"><i class="fas fa-laptop"></i><span>Informatics</span></a>
+  			<a id="clientss" href="soon.html"><i class="fas fa-leaf"></i><span>Biology</span></a>
+  			<a id="contacts" href="soon.html"><i class="fas fa-atom"></i><span>Physics</span></a>
 		</div>
- 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ 		<h2 class="bazar">We provide opportunities for those, who seek them!</h2>
+    	<p class="bazar">As you know, choosing your olympiad field is an important choice.</p>
+    	<p class="bazar">Sometimes you get into it and give your all time and effort to that field. You prepare for months, years and show yourself on the day of olympiad. But, nowadays, there are a lots of olympiads and sources, so that you don't know where to start</p>
+    	<h3 class="bazar">So, what is our <span id="misok">mission</span>?</h3>
+    	<p class="bazar">We want to collect all the possible olympiads in one platform, so that you could find the olympiad easily and fast. In our site, you can find various types of olympiads in different fields, using the navigation bar at the left.</p>
+    	<p class="bazar">Hope, you will find it useful and thanks for using our site!</p>
+    	<p class="bazar"></p>
+    	<p class="bazar"></p>
   	</div>
 
   	<footer class="panel-footer">
@@ -87,10 +62,10 @@
       <div class="row">
         <section id="hours" class="col-sm-6">
           <span>Idea JOQ:</span><br>
-          Physics<br>
-          Chemistry<br>
-          Biology<br>
-          Informatics
+          <a href="soon.html">Physics</a><br>
+          <a href="soon.html">Chemistry</a><br>
+          <a href="soon.html">Biology</a><br>
+          <a href="soon.html">Informatics</a>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-6">
