--- a/site1/chem.html
+++ b/site1/chem.html
@@ -5,15 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="wws" content="height=device-height, initial-scale=1" >
-	<title>Find Olymp</title>
+	<title>Chemistry - Find Olymp</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 	<link rel="stylesheet" href="css1/bootstrap.min.css">
 	<link rel="stylesheet" href="css1/styles.css">
 	<link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-	<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="">
+	<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="logo2.png">
 </head>
-<body>
+<body id="chempage">
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
 			<div class="container">
@@ -37,17 +37,23 @@
 			</div>
 		</nav>
 	</header>
+	<section id="chemka"></section>
   	<div id="main-content" class="container">
   		<div id="sidenav" class="sidenav">
   			<a href="javascript:void(0)" class="closebtn visible-xs visible-sm" onclick="closeNav()">&times;</a>
-  			<a id="homie" href="#"><i class="fas fa-home"></i><span>Home</span></a>
-  			<a id="chem" href="chem.html"><i class="fas fa-flask"></i><span>Chemistry</span></a>
+  			<a id="homie" href="fndolmp.html"><i class="fas fa-home"></i><span>Home</span></a>
+  			<a id="chem" class="active" href="chem.html"><i class="fas fa-flask"></i><span>Chemistry</span></a>
   			<a id="infor" href="soon.html"><i class="fas fa-laptop"></i><span>Informatics</span></a>
   			<a id="biol" href="soon.html"><i class="fas fa-leaf"></i><span>Biology</span></a>
   			<a id="phys" href="soon.html"><i class="fas fa-atom"></i><span>Physics</span></a>
 		</div>
- 		<h2 id="soon" class="text-center">Soon!!!</h2>
-      <p class="text-center">Wait a lot please :)</p>
+
+ 		<h1 id="topic-chem" class="bazar">Chemistry</h1>
+ 		<p class="bazar">Chemistry is the scientific discipline involved with elements and compounds composed of atoms, molecules and ions: their composition, structure, properties, behavior and the changes they undergo during a reaction with other substances.</p>
+
+		<p class = "bazar">In the scope of its subject, chemistry occupies an intermediate position between physics and biology. It is sometimes called the central science because it provides a foundation for understanding both basic and applied scientific disciplines at a fundamental level. For example, chemistry explains aspects of plant chemistry (botany), the formation of igneous rocks (geology), how atmospheric ozone is formed and how environmental pollutants are degraded (ecology), the properties of the soil on the moon (cosmochemistry), how medications work (pharmacology), and how to collect DNA evidence at a crime scene (forensics).</p>
+
+		<p class="bazar">Chemistry addresses topics such as how atoms and molecules interact via chemical bonds to form new chemical compounds. There are four types of chemical bonds: covalent bonds, in which compounds share one or more electron(s); ionic bonds, in which a compound donates one or more electrons to another compound to produce ions (cations and anions); hydrogen bonds; and Van der Waals force bonds.</p>
   	</div>
 
   	<footer class="panel-footer">
