--- a/site1/fndolmp.html
+++ b/site1/fndolmp.html
@@ -37,7 +37,7 @@
 			</div>
 		</nav>
 	</header>
-    <section id="fotka"></section>
+    <!-- <section id="fotka"></section> -->
   	<div id="main-content" class="container">
   		<div id="sidenav" class="sidenav">
   			<a href="javascript:void(0)" class="closebtn visible-xs visible-sm" onclick="closeNav()">&times;</a>
